# kanban-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2021-12-29-194723_create_users/: up.sql
migrations/2022-01-30-000639_create_boards/: up.sql
migrations/2022-02-01-152807_create_lists/: down.sql  up.sql
migrations/2022-02-01-154055_create_cards/: down.sql  up.sql
src/: errors.rs  lib.rs  models.rs  schema.rs
src/models/: board.rs  card.rs  list.rs  mod.rs  user.rs
src/routes/: auth.rs  boards.rs  cards.rs  lists.rs  mod.rs  users.rs
