[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
actix-web = "3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.8.2", features = ["v4"] }
