[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
actix-web = "3"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.132"
argon2 = "0.3.2"
rand_core = { version = "0.6.3", features = ["std"] }
derive_more = "0.99.17"
parse_duration = "2.1.1"
